--- a/cfgs/PointAttN_pcn.yaml
+++ b/cfgs/PointAttN_pcn.yaml
@@ -2,7 +2,7 @@ batch_size: 32
 workers: 2
 nepoch: 400
 model_name: PointAttN
-load_model:  ./log/PointAttN_cd_debug_pcn/model_pcn_new.pth
+load_model: ./log/PointAttN_cd_debug_pcn/model_pcn.pth
 start_epoch: 0
 num_points: 2048
 work_dir: log/
@@ -26,7 +26,7 @@ betas: 0.9, 0.999
 
 device: '0'
 dataset: 'pcn'
-pcnpath: $PATH/ShapeNetCompletion
-c3dpath: $PATH/shapenet
+pcnpath: datasets/ShapeNetCompletion
+c3dpath: datasets/shapenet
 # test
-save_vis: False
+save_vis: True
